Tue Jan 31 20:17:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/CPP-memclient.cpp:
          Fixed gcc 4.7 warning

Mon Jan 30 09:48:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/Default_Constants.h:
          Redefined ACE_MAX_UDP_PACKET_SIZE to 65507 bytes. The actual field size
          sets a theoretical limit of 65,535 bytes (so 65536 was completly wrong)
          which is composed of 8 byte header +65,527 bytes of data for a UDP datagram.
          However the practical limit for the data length which is imposed by the
          underlying IPv4 protocol is only 65,507 bytes (65507 bytes of data +8 bytes
          UDP header +20 bytes IP header).

Fri Jan 27 09:39:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/FlReactor/FlReactor.cpp:
          Const change

        * bin/valgrind.supp:
          Added another suppress

Fri Jan 27 09:01:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/make_release.py:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for next release

Fri Jan 27 08:58:54 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.8 released.

Thu Jan 26 20:38:47 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Condition_T.cpp:

          In order to allow building with inlining on MacOSX Lion,
          Condition_T.cpp needs to explicitly include Time_Value.h. In many
          cases, Time_Value.h was being incidentally included, such as
          through Atomic_Op_GCC_T.cpp, but that is specifically excluded for
          Lion builds using the clang compiler.

Tue Jan 24 16:44:22 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * NEWS:
          Added information about IDL dependency generation.
